// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUIEditableTableFootAction /> composes the className correctly 1`] = `
<EditableTableUtilityBar
  className="xui-editabletablefoot--action test-classname"
>
  <XUIButton
    fullWidth="never"
    isDisabled={false}
    isExternalLink={false}
    isGrouped={false}
    isLink={false}
    isLoading={false}
    retainLayout={true}
    size="small"
    tabIndex={0}
    type="button"
    variant="borderless-primary"
  >
    test button
  </XUIButton>
</EditableTableUtilityBar>
`;

exports[`<XUIEditableTableFootAction /> renders correctly 1`] = `
<EditableTableUtilityBar
  className="xui-editabletablefoot--action"
>
  <XUIButton
    fullWidth="never"
    isDisabled={false}
    isExternalLink={false}
    isGrouped={false}
    isLink={false}
    isLoading={false}
    retainLayout={true}
    size="small"
    tabIndex={0}
    type="button"
    variant="borderless-primary"
  >
    test button
  </XUIButton>
</EditableTableUtilityBar>
`;
